CCMSPUI-761 | Created file upload validator to check if uploaded file is either XML or CSV
